adding fonts not final font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'CoralPixels';
+    src: url('CoralPixels-Regular.ttf') format('truetype');
+}
+
 body{
-    background: linear-gradient(90deg,rgba(53, 155, 42, 1) 0%, rgba(87, 199, 133, 1) 78%, rgba(237, 221, 83, 1) 100%);
+    font-family: 'CoralPixels', sans-serif;
+    color: white;
+    background: linear-gradient(90deg,rgb(255, 255, 255) 0%, rgb(212, 212, 212) 78%, rgb(141, 141, 141) 100%);
 }
