--- a/style.css
+++ b/style.css
@@ -1,10 +1,65 @@
-@font-face {
-    font-family: 'CoralPixels';
-    src: url('CoralPixels-Regular.ttf') format('truetype');
+
+
+body {
+    color: white;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(212, 212, 212) 78%, rgb(141, 141, 141) 100%);
+    margin: 0;
+    padding: 0;
 }
 
-body{
-    font-family: 'CoralPixels', sans-serif;
+.content {
+    padding: 10% 10% 5% 10%;
+}
+
+h1 {
+    margin-bottom: 5%;
+    color: #333;
+}
+
+h3 {
+    margin-top: 5%;
+    font-size: 20px;
+    color: #333;
+}
+
+p {
+    font-size: 20px;
+    color:  #333;
+    line-height: 1.6;
+    position: relative;
+}
+
+/* Navigation Boxes */
+.nav-container {
+    position: fixed;
+    bottom: 200px;
+    right: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    width: 920px;
+}
+
+.nav-box {
+    background-color: rgba(51, 51, 51, 0.7);
+    border-radius: 15px;
+    padding: 15px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+}
+
+.nav-box:hover {
+    background-color: rgba(51, 51, 51, 0.9);
+}
+
+.nav-box a {
     color: white;
-    background: linear-gradient(90deg,rgb(255, 255, 255) 0%, rgb(212, 212, 212) 78%, rgb(141, 141, 141) 100%);
+    text-decoration: none;
+    font-size: 14px;
 }
