--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'SpecialElite';
+    src: url('SpecialElite-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 body {
     margin: 0;
@@ -107,21 +114,22 @@ body {
     font-family: 'AtkinsonMonoSemiBold', monospace;
     font-size: 120%;
 }
+
 .social-icons {
+    font-family: 'SpecialElite', monospace;
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 20px;
     margin-top: 10px;
+    font-size: 16px;
 }
 
-.social-icons img {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    filter: brightness(0) invert(1);
+.social-icons a {
+    color: aliceblue;
+    text-decoration: none;
     transition: transform 0.2s ease;
 }
 
-.social-icons img:hover {
+.social-icons a:hover {
     transform: scale(1.1);
 }
