--- a/style.css
+++ b/style.css
@@ -16,8 +16,19 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('Background.gif') no-repeat center center fixed;
     background-size: cover;
+    image-rendering: pixelated;
+}
+
+.background-pixel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    image-rendering: pixelated;
+    z-index: -1;
 }
 
 .name {
